--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-moyo-corp-rental-app-v1",
+  "name": "equity-funding",
   "version": "1.0.0",
   "private": true,
   "description": "Tenancy and occupancy management system - server app",
@@ -8,7 +8,7 @@
     "github": "https://github.com/Zenith-I-O/Tenancy-And-Occupation-Management-Solution.git"
   },
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
     "start_server": "pm2 start ./bin/www",
     "stop_server": "pm2 stop ./bin/www",
     "generate-doc": "npx scribe generate -a app.js --force"
