--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "start_server": "pm2 start ./bin/www",
+    "deploy": "git add .; git commit -m'debuging'; git push; git push heroku main",
     "stop_server": "pm2 stop ./bin/www",
     "generate-doc": "npx scribe generate -a app.js --force"
   },
